# FigFontPlug

./: .gitignore  CLAUDE.md  LICENSE  README.md
extension/: font-watcher.js  manifest.json  notify.js  rules.json  spoof.js
extension/_metadata/generated_indexed_rulesets/: _ruleset1
font_helper/: pyproject.toml
font_helper/src/figfontplug/: __init__.py  server.py
scripts/: figfontplug.desktop  figfontplug.service  install-service.sh
