[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figfontplug"
version = "0.1.0"
description = "Local font helper for Figma on Linux"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "fonttools>=4.40",
]

[project.scripts]
figfontplug-server = "figfontplug.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/figfontplug"]
